--- a/templates/help.html
+++ b/templates/help.html
@@ -405,6 +405,9 @@
       <h5>{{ _('Overview') }}</h5>
       <p>{{ _('The Karate Club Management System is a comprehensive web application designed to manage all aspects of a karate club\'s operations. It handles player registration, training session tracking, payment management, event organization, and reporting.') }}</p>
 
+      <h6>{{ _('Kiosk Mode') }}</h6>
+      <p>{{ _('For quick session recording without admin login, use Kiosk Mode: athletes click their name and enter their player number to record training sessions.') }}</p>
+
       <h5>{{ _('Quick Start Guide') }}</h5>
       <div class="row">
         <div class="col-md-4">
