--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
+    :root {
+      --primary-color: {{ app_primary_color }};
+      --secondary-color: {{ app_secondary_color }};
+    }
     html, body { height: 100%; }
     body { min-height: 100vh; display: flex; flex-direction: column; padding-top: 70px; }
     main.container { flex: 1 0 auto; }
@@ -27,7 +31,7 @@
       height: 30vw;
       max-width: 640px;
       max-height: 640px;
-      background-image: url('{{ url_for('static', filename='img/enso-logo.webp') }}');
+      background-image: url('{{ app_background or url_for('static', filename='img/enso-logo.webp') }}');
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
@@ -43,7 +47,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="border-bottom:1px solid #e0e0e0;">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="https://www.ensokarate.bg/" target="_blank" rel="noopener">
-      <img src="{{ url_for('static', filename='img/enso-logo.webp') }}" alt="Team ENSO logo">
+      <img src="{{ app_logo }}" alt="Team ENSO logo">
       <span>Team ENSO</span>
     </a>
 
@@ -64,6 +68,8 @@
               <li><a class="dropdown-item" href="{{ url_for('fees_report') }}">{{ _('Fees Report') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_exports') }}">{{ _('Exports') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_imports') }}">{{ _('Imports') }}</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{{ url_for('admin_settings') }}">{{ _('Settings') }}</a></li>
             </ul>
           </li>
         {% endif %}
