--- a/templates/receipts_print_batch_clean.html
+++ b/templates/receipts_print_batch_clean.html
@@ -3,12 +3,34 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', filename='print.css') }}?v=20260131">
+<script>
+  // Force page breaks between receipts for A4 portrait
+  window.onload = function() {
+    var receipts = document.querySelectorAll('.receipt');
+    for (var i = 0; i < receipts.length; i++) {
+      receipts[i].style.position = 'relative';
+      receipts[i].style.width = '100%';
+      receipts[i].style.height = '27cm'; // A4 content height
+      receipts[i].style.minHeight = '27cm';
+      receipts[i].style.maxHeight = '27cm';
+      receipts[i].style.pageBreakAfter = 'always';
+      receipts[i].style.breakAfter = 'page';
+      receipts[i].style.marginBottom = '0';
+      receipts[i].style.paddingBottom = '1cm';
+      receipts[i].style.boxSizing = 'border-box';
+    }
+    
+    setTimeout(function() {
+      window.print();
+    }, 300);
+  };
+</script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
   {% for rec in recs %}
-    <div class="receipt card p-4 mb-4">
+    <div class="receipt card p-4 mb-4{% if not loop.last %} break-after-page{% endif %}">
 
       <div class="d-flex justify-content-between align-items-start mb-3">
         <div>
@@ -81,13 +103,6 @@
 
     </div>
   {% endfor %}
-
-  <div class="mt-3 no-print d-flex gap-2 justify-content-center">
-    <a class="btn btn-success" href="{{ url_for('receipts_print_batch_clean', ids=request.args.get('ids', '')) }}" target="_blank">Print (clean)</a>
-    <a class="btn btn-outline-secondary" href="{{ request.referrer or url_for('list_players') }}">Back</a>
-    <button class="btn btn-outline-danger" type="button" onclick="window.close()">Close</button>
-  </div>
 </div>
-
-<!-- Print dialog auto-open removed -->
+</body>
 {% endblock %}
