--- a/templates/base.html
+++ b/templates/base.html
@@ -62,10 +62,12 @@
         <li class="nav-item"><a class="nav-link" href="{{ url_for('event_list') }}">{{ _('Event List') }}</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('kiosk') }}">{{ _('Kiosk Mode') }}</a></li>
         {% if session.get('is_admin') %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('fees_report') }}">{{ _('Fees Report') }}</a></li>
+        {% endif %}
+        {% if session.get('is_admin') %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="adminMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ _('Admin') }}</a>
             <ul class="dropdown-menu" aria-labelledby="adminMenu">
-              <li><a class="dropdown-item" href="{{ url_for('fees_report') }}">{{ _('Fees Report') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_exports') }}">{{ _('Exports') }}</a></li>
               <li><a class="dropdown-item" href="{{ url_for('admin_imports') }}">{{ _('Imports') }}</a></li>
               <li><hr class="dropdown-divider"></li>
